--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit>=1.32.0
-geopandas>=0.14.0
-pandas>=2.0.0
-numpy>=1.26.0
-matplotlib>=3.7.0
-folium>=0.14.0
-streamlit-folium>=0.15.1
-shapely>=2.0.0
-earthengine-api>=0.1.379
-geemap>=0.29.2
-reportlab>=4.0.0
-Pillow>=10.0.0
-fiona>=1.9.0
+streamlit==1.32.0
+geopandas==0.14.0
+pandas==2.2.0
+numpy==1.26.0
+matplotlib==3.8.0
+folium==0.15.1
+streamlit-folium==0.15.1
+shapely==2.0.3
+reportlab==4.1.0
+Pillow==10.2.0
+fiona==1.9.6
+pyproj==3.6.1
+rtree==1.1.0
