--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-streamlit==1.32.0
-geopandas==0.14.0
-pandas==2.2.0
-numpy==1.26.0
-matplotlib==3.8.0
-folium==0.15.1
-streamlit-folium==0.15.1
-shapely==2.0.3
-reportlab==4.1.0
-Pillow==10.2.0
-fiona==1.9.6
-pyproj==3.6.1
-rtree==1.1.0
+# APIs de Visión y Planet
+roboflow>=1.1.14
+planet>=2.0.0
+requests>=2.31.0
+
+# Procesamiento de imágenes
+opencv-python>=4.8.0
+Pillow>=10.0.0
+rasterio>=1.3.0
+
+# Visualización 3D
+pyvista>=0.43.0
+plotly>=5.17.0
+ipygany>=0.5.0
+
+# Manejo de datos geoespaciales
+geopandas>=0.14.0
+pyproj>=3.6.0
+shapely>=2.0.0
