--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-# APIs de Visión y Planet
-roboflow>=1.1.14
-planet>=2.0.0
-requests>=2.31.0
-
-# Procesamiento de imágenes
-opencv-python>=4.8.0
-Pillow>=10.0.0
-rasterio>=1.3.0
-
-# Visualización 3D
-pyvista>=0.43.0
-plotly>=5.17.0
-ipygany>=0.5.0
-
-# Manejo de datos geoespaciales
+streamlit>=1.32.0
 geopandas>=0.14.0
-pyproj>=3.6.0
+pandas>=2.0.0
+numpy>=1.26.0
+matplotlib>=3.7.0
+folium>=0.14.0
+streamlit-folium>=0.15.1
 shapely>=2.0.0
+reportlab>=4.0.0
+Pillow>=10.0.0
+fiona>=1.9.0
+opencv-python>=4.8.0
+requests>=2.31.0
+rasterio>=1.3.0
