--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
-streamlit>=1.32.0
-geopandas>=0.14.0
-pandas>=2.0.0
-numpy>=1.26.0
-matplotlib>=3.7.0
-folium>=0.14.0
-streamlit-folium>=0.15.1
-shapely>=2.0.0
-reportlab>=4.0.0
-Pillow>=10.0.0
-fiona>=1.9.0
-opencv-python>=4.8.0
-requests>=2.31.0
-rasterio>=1.3.0
+# Librerías base
+streamlit==1.32.0
+numpy==1.26.0
+pandas==2.2.0
+
+# Geoespaciales (versiones clave)
+geopandas==0.14.0
+shapely==2.0.3
+fiona==1.9.6
+pyproj==3.6.1
+rtree==1.1.0
+
+# Visualización y mapas
+folium==0.15.1
+streamlit-folium==0.15.1
+matplotlib==3.8.0
+
+# Imágenes y PDF
+Pillow==10.2.0
+reportlab==4.1.0
+opencv-python-headless==4.9.0.80  # Usa 'headless' para servidores
+rasterio==1.3.10
+
+# Utilidades
+requests==2.31.0
