--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-streamlit==1.32.0
-geopandas==0.14.0
-pandas==2.2.0
-numpy==1.26.0
-matplotlib==3.8.0
-folium==0.15.1
-streamlit-folium==0.15.1
-shapely==2.0.3
-reportlab==4.1.0
-Pillow==10.2.0
-fiona==1.9.6
-opencv-python-headless==4.9.0.80
-requests==2.31.0
-rasterio==1.3.10
-pyproj==3.6.1
-rtree==1.1.0
-ultralytics>=8.2.0
-torch>=2.0.0  # opcional, para CPU
+streamlit>=1.32.0
+geopandas>=0.14.0
+folium>=0.14.0
+streamlit-folium>=0.15.1
+shapely>=2.0.0
+fiona>=1.9.0
+pyproj>=3.6.0
+reportlab>=4.0.0
+matplotlib>=3.7.0
